--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.27.0",
     "autoprefixer": "^10.2.6",
     "bootstrap": "^5.3.7",
+    "dexie": "^4.0.11",
     "postcss": "^8.3.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/dexie": "^1.3.32",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@types/react-router-dom": "^5.3.3",
